--- a/.github/workflows/web-build-sphinx.yml
+++ b/.github/workflows/web-build-sphinx.yml
@@ -37,4 +37,4 @@ jobs:
         REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
         REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
         REMOTE_USER: ${{ secrets.REMOTE_USER }}
-        TARGET: /var/www/html/plumsail.com/docs/forms-web/
+        TARGET: /var/www/html/docs/forms-web/
